Add: f9omstw tables(Brk,Ivac,Subac,IvSymb) & trees;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,3 +24,5 @@ include_directories(.)
 add_subdirectory(fon9)
 add_subdirectory(f9extests)
 add_subdirectory(f9tws)
+add_subdirectory(f9omstw)
+add_subdirectory(apps/f9omstw)
