Add 快速物件分配機制: ObjSupplier; 調整 thread_local 的使用方式: auto& ref = tls; 然後使用 ref;

--- a/fon9/CMakeLists.txt
+++ b/fon9/CMakeLists.txt
@@ -34,6 +34,7 @@ set(fon9src
  ConfigParser.cpp
  DllHandle.cpp
  PkCont.cpp
+ ObjSupplier.cpp
 
  File.cpp
  FilePath.cpp
@@ -206,6 +207,9 @@ target_link_libraries(ConfigLoader_UT fon9_s)
 
 add_executable(PkCont_UT PkCont_UT.cpp)
 target_link_libraries(PkCont_UT fon9_s)
+
+add_executable(ObjSupplier_UT ObjSupplier_UT.cpp)
+target_link_libraries(ObjSupplier_UT fon9_s)
 
 # unit tests: Container / Algorithm
 add_executable(Trie_UT Trie_UT.cpp)
