--- a/f9tws/CMakeLists.txt
+++ b/f9tws/CMakeLists.txt
@@ -1,9 +1,17 @@
 set(f9tws_src
  ExgMktFeeder.cpp
  ExgMktPlayer.cpp
+
+ ExgTradingLineMgr.cpp
+
+ ExgLineFactory.cpp
+ ExgLineArgs.cpp
+
+ ExgLineTmp.cpp
+ ExgLineTmpFactory.cpp
+
  ExgTradingLineFix.cpp
  ExgTradingLineFixFactory.cpp
- ExgTradingLineMgr.cpp
 )
 add_library(f9tws_s STATIC ${f9tws_src})
 target_link_libraries(f9tws_s pthread rt dl)
