Add InnApf 機制: 請參閱 Overview/Filing.md 的簡易說明. 增加 fon9_BitvT_TimeStamp_Orig7 減少 TimeStamp 的儲存用量.

--- a/fon9/CMakeLists.txt
+++ b/fon9/CMakeLists.txt
@@ -53,6 +53,8 @@ set(fon9src
  InnSyncer.cpp
  InnSyncerFile.cpp
  InnDbf.cpp
+ InnStream.cpp
+ InnApf.cpp
  
  buffer/MemBlock.cpp
  buffer/BufferNode.cpp
@@ -283,6 +285,9 @@ target_link_libraries(InnFile_UT fon9_s)
 
 add_executable(InnDbf_UT InnDbf_UT.cpp)
 target_link_libraries(InnDbf_UT fon9_s)
+
+add_executable(InnApf_UT InnApf_UT.cpp)
+target_link_libraries(InnApf_UT fon9_s)
 
 add_executable(FileRevRead_UT FileRevRead_UT.cpp)
 target_link_libraries(FileRevRead_UT fon9_s)
