--- a/f9extests/CMakeLists.txt
+++ b/f9extests/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(f9extests_src
  SymbIn.cpp
  SymbDyTest.cpp
+ ExgMktTester.cpp
 )
 add_library(f9extests_s STATIC ${f9extests_src})
 target_link_libraries(f9extests_s pthread fon9_s)
