--- a/f9twf/CMakeLists.txt
+++ b/f9twf/CMakeLists.txt
@@ -17,6 +17,10 @@ set(f9twf_src
  ExgMcGroup.cpp
  ExgMcToMiConv.cpp
  ExgMrRecover.cpp
+ ExgMdFmtParsers.cpp
+ ExgMdFmtMatchToRts.cpp
+ ExgMdFmtBSToRts.cpp
+ ExgMdFmtBasicInfoToRts.cpp
 )
 add_library(f9twf_s STATIC ${f9twf_src})
 target_link_libraries(f9twf_s pthread rt dl fon9_s)
