f9fmkt.MdRtStreamInnMgr: 可設定不儲存回補資料. f9fmkt.RtsPackType 增加 DealBS, BaseInfoTws; f9fmkt.DealFlag 增加 HeldMatch*; RcSeedVisitorServer: 訂閱過程失敗, 可能在斷線時 crash; 增加 Tsbin 儲存格式: TsAppend, TsReceiver; 增加 Tws.ExgMd: MdReceiver, 及「格式一、格式六、格式十七」的解析; Twf.ExgMc 儲存格式改成 tsbin;

--- a/f9tws/CMakeLists.txt
+++ b/f9tws/CMakeLists.txt
@@ -1,15 +1,19 @@
 set(f9tws_src
- ExgMktPkReceiver.cpp
- ExgMktPlayer.cpp
+ ExgMdPkReceiver.cpp
+ ExgMdPlayer.cpp
+ ExgMdIndices.cpp
+ ExgMdSymbs.cpp
+ ExgMdSystem.cpp
+ ExgMdFmt1Handler.cpp
+ ExgMdFmt6Handler.cpp
+ ExgMdReceiverSession.cpp
+ ExgMdReceiverFactory.cpp
 
  ExgTradingLineMgr.cpp
-
  ExgLineFactory.cpp
  ExgLineArgs.cpp
-
  ExgLineTmp.cpp
  ExgLineTmpFactory.cpp
-
  ExgTradingLineFix.cpp
  ExgTradingLineFixFactory.cpp
 )
