f9twf:Add ExgMcFmtSSToRts: I084.Snapshot:需要發行及存檔. f9twf:Add ExgMdContracts: 解析I011, 修正複式單價格錯誤的問題. f9twf:Channel.13.14: I084.Snapshot 每次循環的 CHANNEL-SEQ 都從 1 開始.

--- a/f9twf/CMakeLists.txt
+++ b/f9twf/CMakeLists.txt
@@ -11,6 +11,7 @@ set(f9twf_src
 
  ExgMdPkReceiver.cpp
  ExgMdSymbs.cpp
+ ExgMdContracts.cpp
  ExgMcReceiver.cpp
  ExgMcReceiverFactory.cpp
  ExgMcChannel.cpp
@@ -20,6 +21,7 @@ set(f9twf_src
  ExgMdFmtParsers.cpp
  ExgMdFmtMatchToRts.cpp
  ExgMdFmtBSToRts.cpp
+ ExgMcFmtSSToRts.cpp
  ExgMdFmtBasicInfoToRts.cpp
 )
 add_library(f9twf_s STATIC ${f9twf_src})
