--- a/f9twf/CMakeLists.txt
+++ b/f9twf/CMakeLists.txt
@@ -12,6 +12,8 @@ set(f9twf_src
  ExgMdPkReceiver.cpp
  ExgMdSymbs.cpp
  ExgMdContracts.cpp
+ TwfSymbRef.cpp
+
  ExgMcReceiver.cpp
  ExgMcReceiverFactory.cpp
  ExgMcChannel.cpp
@@ -23,6 +25,7 @@ set(f9twf_src
  ExgMdFmtBSToRts.cpp
  ExgMcFmtSSToRts.cpp
  ExgMdFmtBasicInfoToRts.cpp
+ ExgMdFmtSysInfoToRts.cpp
 )
 add_library(f9twf_s STATIC ${f9twf_src})
 target_link_libraries(f9twf_s pthread rt dl fon9_s)
