期交所即時行情 Channel 轉發及接收

--- a/f9twf/CMakeLists.txt
+++ b/f9twf/CMakeLists.txt
@@ -17,6 +17,7 @@ set(f9twf_src
  ExgMcReceiver.cpp
  ExgMcReceiverFactory.cpp
  ExgMcChannel.cpp
+ ExgMcChannelTunnel.cpp
  ExgMcGroup.cpp
  ExgMcToMiConv.cpp
  ExgMrRecover.cpp
