twf 支援 I010v8, I012(動態漲跌停階數). MdRtsStream(與前一版不相容) 支援 MktSeq, 動態漲跌停階數. MdRtsKind 增加 f9sv_MdRtsKind_Closing, f9sv_MdRtsKind_QuoteReq, f9sv_MdRtsKind_DynBand

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,10 @@ string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
 include_directories(.)
 
 add_subdirectory(fon9)
-add_subdirectory(f9extests)
+
+if(CMAKE_FON9_BUILD_UINT_TEST)
+   add_subdirectory(f9extests)
+endif()
+
 add_subdirectory(f9tws)
 add_subdirectory(f9twf)
