--- a/f9tws/CMakeLists.txt
+++ b/f9tws/CMakeLists.txt
@@ -34,6 +34,11 @@ target_link_libraries(f9tws_s pthread rt dl)
 add_library(f9tws SHARED ${f9tws_src})
 target_link_libraries(f9tws pthread rt dl)
 
-# unit tests
-add_executable(f9twsExgMkt_UT ExgMkt_UT.cpp)
-target_link_libraries(f9twsExgMkt_UT fon9_s f9tws_s f9extests_s)
+#########################################################################
+############################### Uint Test ###############################
+if(CMAKE_FON9_BUILD_UINT_TEST)
+   add_executable(f9twsExgMkt_UT ExgMkt_UT.cpp)
+   target_link_libraries(f9twsExgMkt_UT fon9_s f9tws_s f9extests_s)
+endif()
+############################## Uint Test END ############################
+#########################################################################
