Add fon9/fmkt/FmktTools.* 升降單位機制、計算漲跌停; Add f9tws/TwsTypes.h 證券商品種類 enum f9tws_SymbKind; Add f9tws/TwsTools.* 根據商品Id編碼規則,判斷: 商品種類、商降單位; Add f9tws 盤中零股; 調整 FileImp 機制; Add make_static_o.sh 協助 gcc 建立 static library; 修正 .c warning;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,24 @@ set(CXX_FLAGS
  -std=c++11
  )
 string(REPLACE ";" " " CMAKE_CXX_FLAGS "${CXX_FLAGS}")
+
+set(C_FLAGS
+ -g
+ -Wall
+ -Wextra
+ -Wconversion
+ -Wpointer-arith
+ -Wshadow
+ -Wwrite-strings
+ -fexec-charset=UTF-8
+ )
+string(REPLACE ";" " " CMAKE_C_FLAGS "${C_FLAGS}")
+
 include_directories(.)
 
 add_subdirectory(fon9)
 
-if(CMAKE_FON9_BUILD_UINT_TEST)
+if(CMAKE_FON9_BUILD_UNIT_TEST)
    add_subdirectory(f9extests)
 endif()
 
