--- a/f9tws/CMakeLists.txt
+++ b/f9tws/CMakeLists.txt
@@ -28,6 +28,9 @@ set(f9tws_src
  ExgLineTmpFactory.cpp
  ExgTradingLineFix.cpp
  ExgTradingLineFixFactory.cpp
+ 
+ # 額外的型別/工具.
+ TwsTools.cpp
 )
 add_library(f9tws_s STATIC ${f9tws_src})
 target_link_libraries(f9tws_s pthread rt dl)
@@ -36,10 +39,10 @@ add_library(f9tws SHARED ${f9tws_src})
 target_link_libraries(f9tws pthread rt dl)
 
 #########################################################################
-############################### Uint Test ###############################
-if(CMAKE_FON9_BUILD_UINT_TEST)
+############################### Unit Test ###############################
+if(CMAKE_FON9_BUILD_UNIT_TEST)
    add_executable(f9twsExgMkt_UT ExgMkt_UT.cpp)
    target_link_libraries(f9twsExgMkt_UT fon9_s f9tws_s f9extests_s)
 endif()
-############################## Uint Test END ############################
+############################## Unit Test END ############################
 #########################################################################
