--- a/f9twf/CMakeLists.txt
+++ b/f9twf/CMakeLists.txt
@@ -37,13 +37,13 @@ add_library(f9twf SHARED ${f9twf_src})
 target_link_libraries(f9twf pthread rt dl fon9)
 
 #########################################################################
-############################### Uint Test ###############################
-if(CMAKE_FON9_BUILD_UINT_TEST)
+############################### Unit Test ###############################
+if(CMAKE_FON9_BUILD_UNIT_TEST)
    add_executable(f9twf_SymbId_UT f9twf_SymbId_UT.cpp)
    target_link_libraries(f9twf_SymbId_UT fon9_s f9twf_s)
 
    add_executable(f9twfExgMkt_UT ExgMkt_UT.cpp)
    target_link_libraries(f9twfExgMkt_UT fon9_s f9twf_s f9extests_s)
 endif()
-############################## Uint Test END ############################
+############################## Unit Test END ############################
 #########################################################################
