auth: Add PoDupLogon 登入管制。使用者的 repw 指令，密碼字串不可寫入 log。

--- a/fon9/CMakeLists.txt
+++ b/fon9/CMakeLists.txt
@@ -57,6 +57,7 @@ set(fon9src
  FdrNotify.cpp
  ConfigFileBinder.cpp
  FileRevRead.cpp
+ FileReadAll.cpp
 
  InnFile.cpp
  InnSyncer.cpp
@@ -156,6 +157,7 @@ set(fon9src
  auth/PolicyTree.cpp
  auth/PolicyMaster.cpp
  auth/PolicyAcl.cpp
+ auth/PoDupLogon.cpp
  auth/SaslClient.cpp
  auth/SaslScramServer.cpp
  auth/SaslScramSha256.cpp
