f9twf: TickSize增加 SOF,SHF; ExgMapMgr增加 IsCurrencyConfigReady;

--- a/f9twf/TwfTickSize.cfg
+++ b/f9twf/TwfTickSize.cfg
@@ -41,6 +41,8 @@ GDF = 0.1
 TGF = 0.5
 BRF = 0.5
 XJF = 0.01
+SOF = 1
+SHF = 0.05
 # 股票期貨.標的證券為股票者:
 f.S = 10=0.01|50=0.05|100=0.1|500=0.5|1000=1|5
 # 股票期貨.標的為 [指數股票型證券投資信託基金] 或 [境外指數股票型基金] 者 (ETF)
