Add PassIdMgr, 交易所連線設定的密碼改用「PassKey=」, 則不會出現明碼.

--- a/fon9/CMakeLists.txt
+++ b/fon9/CMakeLists.txt
@@ -153,6 +153,7 @@ set(fon9src
  auth/AuthMgr.cpp
  auth/RoleMgr.cpp
  auth/UserMgr.cpp
+ auth/PassIdMgr.cpp
  auth/PolicyTable.cpp
  auth/PolicyTree.cpp
  auth/PolicyMaster.cpp
