Add: 不同 LineGroup 裡面 [同類TradingLineManage] 相互支援機制.

--- a/fon9/CMakeLists.txt
+++ b/fon9/CMakeLists.txt
@@ -201,6 +201,9 @@ set(fon9src
  fmkt/SymbQuoteReq.cpp
  fmkt/TradingRequest.cpp
  fmkt/TradingLine.cpp
+ fmkt/TradingLineGroup.cpp
+ fmkt/TradingLineHelper1.cpp
+ fmkt/TradingLineManagerSeed.cpp
  fmkt/FmktTools.cpp
 
  fmkt/MdRtsTypes.cpp
